error_templates/java/test_files/unreachable_statement_error/test.txt
template: "Java.UnreachableStatementError"
---
Unreachable.java:5: error: unreachable statement
        System.out.println("c");
        ^
1 error
===
template: "Java.UnreachableStatementError"
---
You have code below after you returned a value
